# project_task_10.2.1

./: README.md  pyproject.toml
tests/: test_taxes.py
